Bug 141660 - FILEOPEN: DOCX: SAXException importing file with footnote
Summary: FILEOPEN: DOCX: SAXException importing file with footnote
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-SAXParse
  Show dependency treegraph
 
Reported: 2021-04-12 20:44 UTC by Xisco Faulí
Modified: 2021-04-19 07:43 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2021-04-12 20:44:40 UTC
Steps to reproduce:
1. Open attachment 105386 [details] from bug 83199

-> SAXException error at import time

Reproduced in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 4eac7a11e5d39ca6c783f65f1ca2df009b9a37e4
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2021-04-12 20:45:32 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=9b39ce0e66acfe812e1d50e530dc2ccdef3e1357

author	László Németh <nemeth@numbertext.org>	2021-02-10 00:12:52 +0100
committer	László Németh <nemeth@numbertext.org>	2021-02-12 18:27:31 +0100
commit 9b39ce0e66acfe812e1d50e530dc2ccdef3e1357 (patch)
tree f1bb0d9c24dbe6a40e82837f0ff5632a90799530
parent 3380163bc0fb9dab7f289cc36b0eeb0c9b3ddaa9 (diff)
tdf#76260 DOCX import: fix slow footnote import

Bisected with: bibisect-linux64-7.2

Adding Cc: to László Németh
Comment 2 Commit Notification 2021-04-15 12:10:42 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/79aa866b184678e3d306d64da59a7deb54c41aef

tdf#141660 DOCX import: fix footnotes of deletions

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 László Németh 2021-04-15 12:10:56 UTC
tdf#141660 DOCX import: fix footnotes of deletions

Footnotes of tracked deletions resulted exception
during import. They don't need redline copying, because
the anchor point (the footnote index) is already part of
a redline.

Note: handle also remaining unhandled w:footnote type
"separationNotice", which could result shift of the
footnote numbering.

Regression from commit 9b39ce0e66acfe812e1d50e530dc2ccdef3e1357
(tdf#76260 DOCX import: fix slow footnote import).
Comment 4 Xisco Faulí 2021-04-16 08:11:52 UTC
Verified in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: a809b2ab2553e946431699d9d7ac3f6209cbdd6b
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@László Németh, thanks for fixing this issue so quick!!
Comment 5 László Németh 2021-04-19 07:43:02 UTC
@Xisco: thanks for bug report the verification!