tdf#141660 DOCX import: fix footnotes of deletions

Footnotes of tracked deletions resulted exception
during import. They don't need redline copying, because
the anchor point (the footnote index) is already part of
a redline.

Note: handle also remaining unhandled w:footnote type
"separationNotice", which could result shift of the
footnote numbering.

Regression from commit 9b39ce0e66acfe812e1d50e530dc2ccdef3e1357
(tdf#76260 DOCX import: fix slow footnote import).

Change-Id: I01e06fb25aba4f97cca31b5da34f5a7a3f18a54a